--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -161,6 +161,11 @@ header .scroll-wrapper {
   color: rgb(217, 217, 217);
   font-size: calc(0.8rem + 0.5vw);
 }
+@media (max-width: 768px) {
+  header .scroll-wrapper {
+    bottom: 75px;
+  }
+}
 
 .about {
   margin: 400px 0 250px;
